--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -77,7 +77,7 @@
                         <img src="assets/img/clear.svg" alt="">
                         <img src="assets/img/border-clear.svg" alt="">
                     </div>
-                    <app-sign-contract [datas]="datas" [sign]="d"></app-sign-contract>
+                    <app-sign-contract-template [datas]="datas" [sign]="d"></app-sign-contract-template>
                 </div>
             </div>
         </div>
