--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -1,8 +1,6 @@
-<div style="background-color: #f9f9f9;">
+<div class="all">
   <div class="full-height d-flex flex-row">
-    <div class="left-background">
-
-    </div>
+    <div class="left-background"></div>
     <div class="right-panel">
       <div ngbDropdown class="d-inline-block header_language">
         <div class="social-icons" ngbDropdownToggle>
