--- a/src/app/main/contract-type/delete-contract-type/delete-contract-type.component.html
+++ b/src/app/main/contract-type/delete-contract-type/delete-contract-type.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-    <div style="text-align: center; font-weight: bold">
-      <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">{{this.data.title | translate}}</h3>
+    <div class="header">
+      <h3 class="label-header">{{this.data.title | translate}}</h3>
     </div>
     <div style="font-weight: bold">
-        <h3 style="font-family: inherit;">Bạn có chắc chắn muốn xóa loại hợp đồng này không?</h3>
+        <h3 style="font-family: inherit;">{{'confirm.contract-type.delete' | translate}}</h3>
     </div>
     <div class="row" style="justify-content: center;padding-top: 10px;">
         <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
