--- a/src/app/main/role/add-role/add-role.component.scss
+++ b/src/app/main/role/add-role/add-role.component.scss
@@ -1,3 +1,12 @@
+.header{
+    text-align: center; 
+    font-weight: bold
+}
+.label-header{
+    color: #106DB6; 
+    font-family: inherit;
+    text-transform: uppercase;
+}
 .required-title, .invalid {
     color: red;
 }
