--- a/src/app/main/role/detail-role/detail-role.component.html
+++ b/src/app/main/role/detail-role/detail-role.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-    <div style="text-align: center; font-weight: bold">
-      <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">{{this.data.title | translate}}</h3>
+    <div class="header">
+      <h3 class="label-header">{{this.data.title | translate}}</h3>
     </div>
     <div class="content">
         <div class="row">  
