--- a/src/app/main/unit/detail-unit/detail-unit.component.scss
+++ b/src/app/main/unit/detail-unit/detail-unit.component.scss
@@ -1,3 +1,12 @@
+.header{
+    text-align: center; 
+    font-weight: bold
+}
+.label-header{
+    color: #106DB6; 
+    font-family: inherit;
+    text-transform: uppercase;
+}
 .cancel-button{
     border: 0px;
     border-radius: 5px;
