--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -9,7 +9,7 @@
                 <input type="text" formControlName="name">
             </div>
             <div *ngIf="submitted && f.name.errors" class="invalid">
-              <div *ngIf="f.name.errors.required">Họ tên không được để trống</div>
+              <div *ngIf="f.name.errors.required">{{'error.user.name.required' | translate}}</div>
             </div>
         </div>
         <div class="col-md-4">
@@ -21,8 +21,8 @@
               <input type="text" formControlName="email" readonly class="hidden-color">
             </div>
             <div *ngIf="submitted && f.email.errors" class="invalid">
-              <div *ngIf="f.email.errors.required">Email không được để trống</div>
-              <div *ngIf="f.email.errors.email">Email không đúng định dạng</div>
+              <div *ngIf="f.email.errors.required">{{'error.user.email.required' | translate}}</div>
+              <div *ngIf="f.email.errors.email">{{'error.user.email.format' | translate}}</div>
             </div>
         </div>
         <div class="col-md-4">
@@ -40,8 +40,8 @@
                 <input type="text" formControlName="phone">
             </div>
             <div *ngIf="submitted && f.phone.errors" class="invalid">
-              <div *ngIf="f.phone.errors.required">Số điện thoại không được để trống</div>
-              <div *ngIf="f.phone.errors.pattern">Số điện thoại sai định dạng</div>
+              <div *ngIf="f.phone.errors.required">{{'error.user.phone.required' | translate}}</div>
+              <div *ngIf="f.phone.errors.pattern">{{'error.user.phone.format' | translate}}</div>
             </div>
         </div>
         <div class="col-md-4">
@@ -63,7 +63,7 @@
             <div class="hidden-color">{{organizationName}}</div>
           </div>
             <div *ngIf="submitted && f.organizationId.errors" class="invalid">
-              <div *ngIf="f.organizationId.errors.required">Tổ chức không được để trống</div>
+              <div *ngIf="f.organizationId.errors.required">{{'error.unit.name.required' | translate}}</div>
             </div>
         </div>
         <div class="col-md-4">
@@ -85,7 +85,7 @@
             <div class="hidden-color">{{roleName}}</div>
           </div>
           <div *ngIf="submitted && f.role.errors" class="invalid">
-            <div *ngIf="f.role.errors.required">Vai trò không được để trống</div>
+            <div *ngIf="f.role.errors.required">{{'error.role.name.required' | translate}}</div>
           </div>
         </div>
       </div>
@@ -144,7 +144,7 @@
                     <input type="text" formControlName="phoneKpi">
                 </div>
                 <div *ngIf="submitted && f.phoneKpi.errors" class="invalid">
-                  <div *ngIf="f.phoneKpi.errors.pattern">Số điện thoại sai định dạng</div>
+                  <div *ngIf="f.phoneKpi.errors.pattern">{{'error.user.phone.format' | translate}}</div>
                 </div>
               </div>
             </div>
