--- a/src/app/main/check-sign-digital/check-sign-digital.component.scss
+++ b/src/app/main/check-sign-digital/check-sign-digital.component.scss
@@ -7,6 +7,15 @@
     background-color: #106DB6;
     font-size: 13px;
   }
+  .btn_label{
+    border: 0px;
+    border-radius: 5px;
+    height: 33px;
+    box-sizing: border-box;
+    background-color: #eeeeee;
+    font-size: 13px;
+    margin-left: 20px;
+  }
   .input_text {
     padding-left: 10px;
     outline: none;
