--- a/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
+++ b/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
@@ -11,6 +11,7 @@
                 </div>
                 <div *ngIf="submitted && f.code.errors" class="invalid">
                     <div *ngIf="f.code.errors.required">{{'error.contract-type.code.required' | translate}}</div>
+                    <div *ngIf="f.code.errors.pattern">{{'Mã loại hợp đồng không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
             </div>
         </div>
@@ -23,6 +24,7 @@
                 </div>
                 <div *ngIf="submitted && f.name.errors" class="invalid">
                     <div *ngIf="f.name.errors.required">{{'error.contract-type.name.required' | translate}}</div>
+                    <div *ngIf="f.name.errors.pattern">{{'Tên loại hợp đồng không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
             </div>
         </div>
