--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -10,6 +10,7 @@
             </div>
             <div *ngIf="submitted && f.name.errors" class="invalid">
               <div *ngIf="f.name.errors.required">{{'error.user.name.required' | translate}}</div>
+              <div *ngIf="f.name.errors.pattern">{{'Họ tên không được chứa ký tự đặc biệt' | translate}}</div>
             </div>
         </div>
         <div class="col-md-4">
@@ -28,7 +29,7 @@
         <div class="col-md-4">
           <div class="label text-color">{{'user.birthday' | translate}}</div>
           <div>
-            <p-calendar formControlName="birthday" [showIcon]="true" dateFormat="dd/mm/yy" ></p-calendar>
+            <p-calendar formControlName="birthday" [showIcon]="true" dateFormat="dd/mm/yy" [readonlyInput]="true"></p-calendar>
           </div>
         </div>
       </div>
@@ -183,6 +184,9 @@
                 <div>{{'user.name.v2' | translate}}</div>
                 <div class="input-data">
                   <input type="text" formControlName="nameHsm">
+                </div>
+                <div *ngIf="submitted && f.nameHsm.errors" class="invalid">
+                  <div *ngIf="f.nameHsm.errors.pattern">{{'Tên người dùng không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
               </div>
             </div>
