--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -100,13 +100,28 @@
     margin: 0;
   }
 
-  .nav-link.active {
-    color: #0d6efd;
-    font-weight: 500;
-    background-color: #c5ebff;
+  .p-selectbutton .p-button {
+    outline: 0 !important;
+    box-shadow: none !important;
+    height: 33px;
+    width: 50%;
   }
-  .nav-link {
-    color: #6c6c6d;
+  .p-selectbutton .p-button.p-highlight {
+    background: #c5ebff;
+    border-color: #c5ebff;
+    color: #106DB6;
+  }
+
+  .p-dropdown {
+    border: 1px solid #106DB6;
+    border-radius: 5px;
+    height: 33px;
+    width: 100%;
+    outline: 0;
+    color: black !important;
+  }
+  .p-dropdown-label {
+      padding: 5px 5px 5px 15px;
   }
 }
 
@@ -150,9 +165,6 @@
 .img_icon:hover{
   width: 30px;
 }
-
-
-
 .input_text {
   padding-left: 10px;
   outline: none;
