--- a/src/app/action-device/action-device.component.html
+++ b/src/app/action-device/action-device.component.html
@@ -6,14 +6,14 @@
   <div class="content">
     <h3>THÔNG BÁO</h3>
     <div class="content-text">
-      <span>Đã có phiên bản trên điện thoại di động.</span><br>
-      <span>Vui lòng truy cập hoặc tải ứng dụng để tiếp tục sử dụng dịch vụ.</span>
+      <span>{{'have_version_app_mobile' | translate}}</span><br>
+      <span>{{'please_openApp_or_download' | translate}}</span>
     </div>
     <div class="footer">
       <button class="footer-btn" (click)="nextApp()">
-        <img src="assets/img/Group 5478.svg" alt="eContract">Mở app
+        <img src="assets/img/Group 5478.svg" alt="eContract">{{'open_app' | translate}}
       </button>
-      <button class="footer-btn" (click)="downloadApp()"><img src="assets/img/download_app.svg" alt="eContract">Tải app</button>
+      <button class="footer-btn" (click)="downloadApp()"><img src="assets/img/download_app.svg" alt="eContract">{{'download_app' | translate}}</button>
     </div>
   </div>
 </div>
