--- a/src/app/main/check-sign-digital/check-sign-digital.component.html
+++ b/src/app/main/check-sign-digital/check-sign-digital.component.html
@@ -20,7 +20,8 @@
                 <td>{{list.signOn}}</td>
                 <td>{{list.durationValidCertificate}}</td>
                 <td>{{list.deptGrantCert}}</td>
-                <td>{{list.signOnValidTime?'Hợp lệ':'Không hợp lệ'}}</td>
+                <td><img *ngIf="list.signOnValidTime" src="../../../assets/img/icon_valid.svg" width="16px" height="16px">
+                    <img *ngIf="!list.signOnValidTime" src="../../../assets/img/icon_close.svg" width="16px" height="16px"> {{list.signOnValidTime?'Hợp lệ':'Không hợp lệ'}}</td>
             </tr>  
         </ng-template>
         <ng-template pTemplate="paginatorleft" let-state>
@@ -32,5 +33,12 @@
         </p-table>
     </div>
 </div>
-   
+
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-spin-clockwise">
+  <p style="font-size: 18px; color: white">Đang xử lý...</p>
+</ngx-spinner>
     
