--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -9,8 +9,7 @@
       </div>
       <div class="contract--content">
         <div class="contract__content--title">
-          <div>{{'organization.me' | translate | uppercase}} -</div>
-          <input type="text" [(ngModel)]="data_organization.name" disabled>
+          <div>{{'organization.me' | translate | uppercase}}</div>
         </div>
         <div class="contract__content--participants">
           <div class="participants-border">
@@ -226,10 +225,7 @@
       </div>
       <div class="contract--content">
         <div class="contract__content--title">
-          <div style="width: 72px">{{'doi_tac' | translate | uppercase}} -</div>
-          <input type="text" placeholder="{{(item.type == 2 ? 'nhap_ten_doi_tac_to_chuc' : '') | translate}}"
-                 [(ngModel)]="item.name" [disabled]="item.type == 3">
-          <!--        <input *ngIf="item.type == 3" type="text" [ngModel]="this.getNameIndividual" disabled>-->
+          <div style="width: 72px">{{'doi_tac' | translate | uppercase}}</div>
         </div>
         <div *ngIf="this.dataParnterOrganization().length > 1" style="display: flex; justify-content: flex-end">
           <u class="label text-color" (click)="deletePartner(id)"
@@ -433,7 +429,7 @@
                         <img src="assets/img/icon_name.svg" class="input-img">
                         <input [id]="'signature-partner-' + d.ordering" type="text"
                                placeholder="{{'nhap_ho_va_ten' | translate}}"
-                               [(ngModel)]="d.name" (change)="getName($event, item)" disabled>
+                               [(ngModel)]="d.name" disabled>
                       </div>
                     </div>
             
