--- a/src/app/main/check-sign-digital/check-sign-digital.component.html
+++ b/src/app/main/check-sign-digital/check-sign-digital.component.html
@@ -6,7 +6,7 @@
         <button class="btn btn-lg btn-block btn_label" *ngIf="this.fileName">{{fileName}}</button>
     </div>
     <div class="row" style="padding-top: 20px;">
-        <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
+        <p-table *ngIf="totalRecord > 0"  [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
         <ng-template pTemplate="header" let-columns>
             <tr>
                 <th *ngFor="let col of cols" [style]='col.style'>
@@ -33,6 +33,14 @@
         </p-table>
     </div>
 </div>
+
+<div *ngIf="totalRecord == 0" 
+  style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+    <div style="display: table-cell;vertical-align: middle;"> 
+      <img src="../../../assets/img/empty_data.svg"/>
+      <div style="color: #94A7C6">{{'sign.file.no' | translate}}</div>
+    </div>
+  </div>
 
 <ngx-spinner
   bdColor="rgba(51,51,51,0.8)"
