add api detail contract template

--- a/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
+++ b/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
@@ -10,11 +10,11 @@
           </div>
           <div>
             <span class="title-contract">Tên mẫu hợp đồng:</span>
-            <span>{{datas.is_data_contract.name}}</span>
+            <span>{{datas?.is_data_contract?.name}}</span>
           </div>
           <div>
             <span class="title-contract">Mã mẫu hợp đồng:</span>
-            <span>{{datas.is_data_contract.code}}</span>
+            <span>{{datas?.is_data_contract?.code}}</span>
           </div>
           <div>
             <span class="title-contract">File đính kèm:</span>
@@ -25,7 +25,7 @@
           </div>
           <div>
             <span class="title-contract">Thời gian hiệu lực:</span>
-            <span>{{datas.is_data_contract.start_time}}</span>
+            <span>{{datas?.is_data_contract?.start_time}}</span>
           </div>
   
         </div>
